--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -1,1 +1,37 @@
-Sadanand Akshay Pai is liking this
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+		<title>Project Portal</title>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
+        <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.1/css/materialize.min.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.1/js/materialize.min.js"></script>
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    </head>
+
+    <body>
+    	<nav class="light-blue lighten-1" role="navigation">
+        <div class="nav-wrapper container">
+            <a id="logo-container" href="/portal" class="brand-logo">Project Portal</a>
+            <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <li><a href="#"><i class="material-icons left">info</i>About</a></li>
+                <li><a href="#"><i class="material-icons left">list</i>Projects</a></li>
+                <li><a href="#"><i class="material-icons left">perm_identity</i>Account</a></li>
+            </ul>
+
+            <ul class="side-nav" id="mobile-demo">
+                <li><a href="#"><i class="material-icons left">info</i>About</a></li>
+                <li><a href="#"><i class="material-icons left">list</i>Projects</a></li>
+                <li><a href="#"><i class="material-icons left">perm_identity</i>Account</a></li>
+             </ul>
+        </div>
+   		</nav>
+
+        <div class="container">
+            <h1>Welcome to project portal</h1>
+        </div>
+    </body>
+</html>
