--- a/portal/templates/index.html
+++ b/portal/templates/index.html
@@ -1,17 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-		<title>Project Portal</title>
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
+<html>
+<head>
+	<meta charset="utf-8">
+	  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
         <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.1/css/materialize.min.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.1/js/materialize.min.js"></script>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    </head>
+		 <script type="text/javascript">
+            $(document).ready(function(){
+                $(".button-collapse").sideNav({
+                    menuWidth: 250, // Default is 300
+                    edge: 'left', // Choose the horizontal origin
+                    closeOnClick: true, // Closes side-nav on <a> clicks, useful for Angular/Meteor
+                    draggable: false // Choose whether you can drag to open on touch screens
+                });
+                $(document).ready(function(){
+                    $('.modal').modal();
+                  });
+                });
+        </script>
+        <style>
+          .container {
+            margin: 0 auto;
+            max-width: 1280px;
+            width: 90%;
+          }
+          @media  only screen and (min-width: 601px){.container{width:60%}}
+          @media  only screen and (min-width: 993px){.container{width:90%}}
+        </style>
+</head>
 
-    <body>
-    	<nav class="light-blue lighten-1" role="navigation">
+<body>
+	
+	<nav class="light-blue lighten-1" role="navigation">
         <div class="nav-wrapper container">
             <a id="logo-container" href="/portal" class="brand-logo">Project Portal</a>
             <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
@@ -28,10 +50,105 @@
                 <li><a href="#"><i class="material-icons left">perm_identity</i>Account</a></li>
              </ul>
         </div>
-   		</nav>
+   	</nav>
 
-        <div class="container">
-            <h1>Welcome to project portal</h1>
-        </div>
-    </body>
+	<div class="container">
+		<br>
+		<div class="row hide-on-small-only">
+			<div class="col m3">
+				<img class="circle responsive-img" src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/p/8/005/063/234/3846abf.jpg" style="border:1px black solid" width="200px" />
+			</div>
+			<div class="col m9">
+				<br><br>
+				<div class="row">
+					<div class="col m6 s24">
+						<label class="active" for="first_name">First Name: </label>Sadanand
+					</div>
+					<div class="col m6">
+						<label class="active" for="last_name">Last Name: </label>Pai
+					</div>
+				</div>
+				<div class="row">
+					<div class="col m6">
+						<label class="active" for="dob">Date of birth: </label>25 May 1991
+					</div>
+					<div class="col m6">	
+						<label class="active" for="yoj">Year of Joining: </label>2014
+					</div>
+				</div>
+				<div class="row">
+					<div class="col m6">
+						<label class="active" for="branch">Branch: </label>Electronics And Communication
+					</div>
+					<div class="col m6">
+						<label class="active" for="stud_id">Student Id: </label>4NM4567EC5678
+					</div>
+				</div>
+			</div>
+		</div>
+		
+		
+		<div class="row hide-on-med-and-up">
+			<div class="col s12 center-align">
+				<img class="circle responsive-img" src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/p/8/005/063/234/3846abf.jpg" style="border:1px black solid" width="200px" >
+			</div>
+			<div class="col s12">
+				<br><br>
+				<div class="row">
+					<div class="col s6 right-align"><label class="active" for="first_name">First Name: </label></div>
+					<div class="col s6">Sadanand</div>
+				</div>
+				<div class="row">
+					<div class="col s6 right-align"><label class="active" for="last_name">Last Name: </label></div>
+					<div class="col s6">Pai</div>
+				</div>
+				<div class="row">
+					<div class="col s6 right-align"><label class="active" for="dob">Date of birth: </label></div>
+					<div class="col s6">25 May 1991</div>
+				</div>
+				<div class="row">
+					<div class="col s6 right-align"><label class="active" for="yoj">Year of Joining: </label></div>
+					<div class="col s6">2014</div>
+				</div>
+				<div class="row">
+					<div class="col s6 right-align"><label class="active" for="branch">Branch: </label></div>
+					<div class="col s6">Electronics And Communication</div>
+				</div>
+				<div class="row">
+					<div class="col s6 right-align"><label class="active" for="stud_id">Student Id: </label></div>
+					<div class="col s6">4NM4567EC5678</div>
+				</div>
+			</div>
+		</div>
+		
+		<hr/>
+		<br>
+		
+		<div class="row hide-on-small-only">
+			<div class="row">
+				<div class="col m2 right-align"><label class="active" for="email">Email Id</label></div>
+				<div class="col m2"><td class="right-align">sadypai@gmail.com</div>
+
+				<div class="col m2 right-align"><label class="active" for="password">Password</label></div>
+				<div class="col m2"><td class="right-align">**********</div>
+
+				<a class="waves-effect waves-light btn orange">Change Password</a>
+			</div>
+		</div>
+		
+		<div class="row hide-on-med-and-up">
+			<div class="row">
+				<div class="col s6 right-align"><label class="active" for="email">Email Id</label></div>
+				<div class="col s6"><td class="right-align">sadypai@gmail.com</div>
+			</div>
+			<div class="row">
+				<div class="col s6 right-align"><label class="active" for="password">Password</label></div>
+				<div class="col s6"><td class="right-align">**********</div>
+			</div>
+			<div class="row center-align">
+				<a class="waves-effect waves-light btn orange">Change Password</a>
+			</div>
+		</div>
+	</div>
+</body>
 </html>
