--- a/portal/templates/index.html
+++ b/portal/templates/index.html
@@ -7,6 +7,17 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.1/css/materialize.min.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.1/js/materialize.min.js"></script>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+
+        <link rel="manifest" href="/manifest.json">
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-web-app-status-bar-style" content="black">
+		<meta name="apple-mobile-web-app-title" content="Trading Masters">
+		<link rel="apple-touch-icon" href="images/icons/icon-152x152.png">
+		<meta name="msapplication-TileImage" content="icons/icon.png">
+		<meta name="msapplication-TileColor" content="#2F3BA2">
+
+
 		 <script type="text/javascript">
             $(document).ready(function(){
                 $(".button-collapse").sideNav({
@@ -150,5 +161,6 @@
 			</div>
 		</div>
 	</div>
+	<script src="app.js" async></script>
 </body>
 </html>
