--- a/portal/templates/index.html
+++ b/portal/templates/index.html
@@ -9,11 +9,11 @@
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 
-        <link rel="manifest" href="/manifest.json">
+        <link rel="manifest" href="manifest.json">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 		<meta name="apple-mobile-web-app-title" content="Trading Masters">
-		<link rel="apple-touch-icon" href="images/icons/icon-152x152.png">
+		<link rel="apple-touch-icon" href="icons/icon-152x152.png">
 		<meta name="msapplication-TileImage" content="icons/icon.png">
 		<meta name="msapplication-TileColor" content="#2F3BA2">
 
