--- a/portal/templates/index.html
+++ b/portal/templates/index.html
@@ -13,10 +13,12 @@
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 		<meta name="apple-mobile-web-app-title" content="Trading Masters">
-		<link rel="apple-touch-icon" href="icons/icon-152x152.png">
+		<link rel="apple-touch-icon" href="icons/android-icon-152x152.png">
 		<meta name="msapplication-TileImage" content="icons/icon.png">
 		<meta name="msapplication-TileColor" content="#2F3BA2">
-
+		<link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="96x96" href="icons/favicon-96x96.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
 
 		 <script type="text/javascript">
             $(document).ready(function(){
