--- a/portal/templates/forms/addStudent.html
+++ b/portal/templates/forms/addStudent.html
@@ -105,6 +105,7 @@
             }
 
             $scope.updatevalue = function(student){
+		    Materialize.toast('Student details of ' + student.fields.stud_id +  ' has been updated', 4000);
 			    $http({
 			        method : "POST",
 			        headers: {
