--- a/portal/templates/forms/addStudent.html
+++ b/portal/templates/forms/addStudent.html
@@ -24,17 +24,17 @@
 		<table class="bordered">
 			<thead>
 				<tr>
-					<th>Student Id</th>
-					<th>First Name</th>
-					<th>Last Name</th>
-					<th>Branch</th>
-					<th>Year</th>
-					<th><a class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons">add</i></a></th>
+					<th ng-click="orderByMe('fields.stud_id')">Student Id</th>
+					<th ng-click="orderByMe('fields.first_name')">First Name</th>
+					<th ng-click="orderByMe('fields.last_name')">Last Name</th>
+					<th ng-click="orderByMe('fields.branch')">Branch</th>
+					<th ng-click="orderByMe('fields.year')">Year</th>
+					<th><a class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons" ng-click="addStud()">add</i></a></th>
 				</tr>
 			</thead>
 			<tbody>
 				{% verbatim %}
-				<tr ng-repeat="student in students | orderBy:'fields.stud_id' | filter: tableValue">
+				<tr ng-repeat="student in students | orderBy:sort:reverse | filter: tableValue">
 					<td ng-if="edited == student.pk">{{student.fields.stud_id}}</td>
 					<td ng-if="edited == student.pk"><input id="first_name" type="text" value={{student.fields.first_name}} /></td>
 					<td ng-if="edited == student.pk"><input id="last_name" type="text" value={{student.fields.last_name}} /></td>
