--- a/portal/templates/forms/addStudent.html
+++ b/portal/templates/forms/addStudent.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -12,30 +13,21 @@
 
 <body ng-app="myApp" ng-controller="myCtrl" ng-init="edited = 0">
 	<div class="container">
-		<div class="row">
-			<div class="col s12">
-			  Search: 
-			  <div class="input-field inline">
-				<input id="tableValue" type="text" class="validate" ng-model="tableValue">
-				<label for="tableValue" data-error="wrong" data-success="right"></label>
-			  </div>
-			</div>
-		</div>
 		<table class="bordered">
 			<thead>
 				<tr>
-					<th ng-click="orderByMe('fields.stud_id')">Student Id</th>
-					<th ng-click="orderByMe('fields.first_name')">First Name</th>
-					<th ng-click="orderByMe('fields.last_name')">Last Name</th>
-					<th ng-click="orderByMe('fields.branch')">Branch</th>
-					<th ng-click="orderByMe('fields.year')">Year</th>
-					<th><a class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons" ng-click="addStud()">add</i></a></th>
+					<th>Student Id</th>
+					<th>First Name</th>
+					<th>Last Name</th>
+					<th>Branch</th>
+					<th>Year</th>
+					<th><a class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons">add</i></a></th>
 				</tr>
 			</thead>
 			<tbody>
-				{% verbatim %}
-				<tr ng-repeat="student in students | orderBy:sort:reverse | filter: tableValue">
-					<td ng-if="edited == student.pk">{{student.fields.stud_id}}</td>
+				
+				<tr ng-repeat="student in students">
+					<td ng-if="edited == student.pk"><input id="stud_id" type="text" value={{student.fields.stud_id}} /></td>
 					<td ng-if="edited == student.pk"><input id="first_name" type="text" value={{student.fields.first_name}} /></td>
 					<td ng-if="edited == student.pk"><input id="last_name" type="text" value={{student.fields.last_name}} /></td>
 					<td ng-if="edited == student.pk"><input id="branch" type="text" value={{student.fields.branch}} /></td>
@@ -49,18 +41,17 @@
 
 					<td ng-if="edited != student.pk"><a class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons" ng-click="edit(student.pk)">create</i></a></td>
 					<td ng-if="edited == student.pk"><a class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons" ng-click="updatevalue(student)">update</i></a></td>
-					
-					<td ng-if="edited == student.pk"><a class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons" ng-click="edit(0)">cancel</i></a></td>
-					<td ng-if="edited != student.pk"><a class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons" ng-click="delete(student.pk)">delete</i></a></td>
+
+					<td><a class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons" ng-click="delete(student.pk)">delete</i></a></td>
 				</tr>
-				{% endverbatim %}
+				
 			</tbody>
 		</table>
 
-		<div ng-if="add" class="row">
+		<div class="row">
             <div class="col s12">
 				<form class="col s12 m12" method="POST" action="/portal/students/add/" accept-charset="UTF-8">
-					{% csrf_token %}
+					<input type='hidden' name='csrfmiddlewaretoken' value='FQbzlgBikxkNqU12PYCHhbaPTCp6hOkCg6DtAv3ERi0SqdHe91voOncB6zCi0EJ6' />
 					<div class="input-field col s12 m4 offset-m4 offset-l4">
 						<input id="stud_id" type="text" name="stud_id" required="yes" maxlength="10" title="Alphanumerics, only with 10 characters">
 						<label for="stud_id">Student ID</label><br>
@@ -95,69 +86,54 @@
 	</div>
 
 	<script type="text/javascript">
-	var app = angular.module('myApp', []);
-	app.controller('myCtrl', function($scope, $http) {
+		var app = angular.module('myApp', []);
+		app.controller('myCtrl', function($scope, $http) {
 
-		$scope.sort = "fields.stud_id";
-		$scope.reverse = false;
-		$scope.add = false;
-
-		$scope.edit= function(pk){
-			$scope.edited= pk;
-		    }
+			$scope.edit= function(pk){
+            	$scope.edited= pk;
+            }
 
 
  			
-		$scope.delete= function(pk){
-		    $http.get("/portal/students/delete/"+pk).then(function(response) {
-			$scope.deleteinfo = response.data;
-			if($scope.deleteinfo=="OK"){
-				$scope.refresh();
-			}
-		    });
-            	}
+			$scope.delete= function(pk){
+			    $http.get("/portal/students/delete/"+pk).then(function(response) {
+			        $scope.deleteinfo = response.data;
+			        if($scope.deleteinfo=="OK"){
+			        	$scope.refresh();
+			        }
+			    });
+            }
 
             $scope.updatevalue = function(student){
-	    Materialize.toast('Student details of ' + student.fields.stud_id +  ' is updated', 4000);
-		    $http({
-			method : "POST",
-			headers: {
-					'X-CSRFToken': jQuery("[name=csrfmiddlewaretoken]").val(),
-				},
-				data: {'pk': student.pk, 'stud_id': $('#stud_id').val(), 'first_name': $('#first_name').val(), 'last_name': $('#last_name').val(), 'branch': $('#branch').val(), 'year': $('#year').val()},
+			    $http({
+			        method : "POST",
+			        headers: {
+						'X-CSRFToken': jQuery("[name=csrfmiddlewaretoken]").val(),
+					},
+			  		data: {'pk': student.pk, 'stud_id': $('#stud_id').val(), 'first_name': $('#first_name').val(), 'last_name': $('#last_name').val(), 'branch': $('#branch').val(), 'year': $('#year').val()},
 
-			url : "/portal/students/update/"
+			        url : "/portal/students/update/"
 
-		    }).then(function mySuccess(response) {
-			    if(response.data == "Ok"){
+			    }).then(function mySuccess(response) {
+				    if(response.data == "Ok"){
+					$scope.edited= 0;
+					$scope.refresh();
+				    }
+			    }, function myError(response) {
+			        alert(response.statusText);
 				$scope.edited= 0;
-				$scope.refresh();
-			    }
-		    }, function myError(response) {
-			alert(response.statusText);
-			$scope.edited= 0;
-		    });
-		}
+			    });
+			}
 
 
 
-		$scope.refresh= function(){
-		    $http.get("/portal/students/get/").then(function(response) {
-			$scope.students = response.data;
-		    });
-		}
-		
-	    	$scope.orderByMe = function(order) {
-			$scope.sort = order;
-			$scope.reverse = !$scope.reverse;
-		}
+            $scope.refresh= function(){
+			    $http.get("/portal/students/get/").then(function(response) {
+			        $scope.students = response.data;
+			    });
+			}
 
-		$scope.addStud = function(){
-			$scope.add = !$scope.add;
-		}
-
-	    
-		$scope.refresh();
+			$scope.refresh();
 		});
      
 	</script>
