--- a/portal/templates/forms/addStudent.html
+++ b/portal/templates/forms/addStudent.html
@@ -135,7 +135,7 @@
 				    if(response.data == "Ok"){
 						$scope.edited= 0;
 						$scope.refresh();
-					    	Materialize.toast('Student details of ' + student.fields.stud_id +  ' has been updated', 4000);
+					    	Materialize.toast('Student details for id ' + student.fields.stud_id +  ' updated', 4000);
 				    }
 			    }, function myError(response) {
 			        alert(response.statusText);
