--- a/portal/templates/forms/addStudent.html
+++ b/portal/templates/forms/addStudent.html
@@ -40,10 +40,10 @@
 				{% verbatim %}
 				<tr ng-repeat="student in students | orderBy:sort:reverse | filter: tableValue">
 					<td ng-if="edited == student.pk">{{student.fields.stud_id}}</td>
-					<td ng-if="edited == student.pk"><div class="input-field"><input id="first_name" type="text" value={{student.fields.first_name}} /></div></td>
-					<td ng-if="edited == student.pk"><div class="input-field"><input id="last_name" type="text" value={{student.fields.last_name}} /></div></div></td>
-					<td ng-if="edited == student.pk"><div class="input-field"><input id="branch" type="text" value={{student.fields.branch}} /></div></td>
-					<td ng-if="edited == student.pk"><div class="input-field"><input id="year" type="text" value={{student.fields.year}} /></div></td>	
+					<td ng-if="edited == student.pk"><div class="input-field"><input id="first_name" type="text" required="required" value={{student.fields.first_name}} /></div></td>
+					<td ng-if="edited == student.pk"><div class="input-field"><input id="last_name" type="text" required="required" value={{student.fields.last_name}} /></div></div></td>
+					<td ng-if="edited == student.pk"><div class="input-field"><input id="branch" type="text" required="required" value={{student.fields.branch}} /></div></td>
+					<td ng-if="edited == student.pk"><div class="input-field"><input id="year" type="text" required="required" value={{student.fields.year}} /></div></td>	
 
 					<td ng-if="edited != student.pk">{{student.fields.stud_id}}</td>
 					<td ng-if="edited != student.pk">{{student.fields.first_name}}</td>
