--- a/portal/templates/studentProfile.html
+++ b/portal/templates/studentProfile.html
@@ -52,15 +52,11 @@
             <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
 
             <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="#"><i class="material-icons left">info</i>About</a></li>
-                <li><a href="#"><i class="material-icons left">list</i>Projects</a></li>
-                <li><a href="#"><i class="material-icons left">perm_identity</i>Account</a></li>
+                <li><a href="/portal/signout/"><i class="material-icons left">perm_identity</i>Logout</a></li>
             </ul>
 
             <ul class="side-nav" id="mobile-demo">
-                <li><a href="#"><i class="material-icons left">info</i>About</a></li>
-                <li><a href="#"><i class="material-icons left">list</i>Projects</a></li>
-                <li><a href="#"><i class="material-icons left">perm_identity</i>Account</a></li>
+                <li><a href="/portal/signout/"><i class="material-icons left">perm_identity</i>Logout</a></li>
              </ul>
         </div>
    	</nav>
