--- a/portal/templates/forms/signin.html
+++ b/portal/templates/forms/signin.html
@@ -19,14 +19,14 @@
           <div class="row">
               <div class="input-field col s12 m4 offset-m4 offset-l4">
                 <i class="material-icons prefix">account_circle</i>
-                <input id="icon_prefix" type="text" name="username" class="validate" required="yes" autocomplete="off" pattern="[A-z0-9_-]{5,15}" maxlength="15" title="Alphanumerics, -  and _ only with 5 to 15 characters">
+                <input id="icon_prefix" type="text" name="username" class="validate" required="yes" autocomplete="off" maxlength="15" title="Alphanumerics, -  and _ only with 5 to 15 characters">
                 <label for="icon_prefix" data-error="Alphanumerics">User Name</label>
               </div>
           </div>
           <div class="row">
               <div class="input-field col s12 m4 offset-m4 offset-l4">
                 <i class="material-icons prefix">vpn_key</i>
-                <input id="icon_prefix" type="password" name="password" class="validate" required="yes" pattern="[A-z0-9_-]{5,15}" maxlength="15" title="Alphanumerics, -  and _ only">
+                <input id="icon_prefix" type="password" name="password" class="validate" required="yes" maxlength="15" title="Alphanumerics, -  and _ only">
                 <label for="icon_prefix" data-error="Alphanumerics">Password</label>
               </div>
           </div>
