--- a/portal/templates/forms/addStudent.html
+++ b/portal/templates/forms/addStudent.html
@@ -31,7 +31,7 @@
 		<table class="bordered">
 			<thead>
 				<tr>
-					<th ng-click="orderByMe('fields.stud_id')">Student Id</th>
+					<th ng-click="orderByMe('fields.user[0]')">Student Id</th>
 					<th ng-click="orderByMe('fields.first_name')">First Name</th>
 					<th ng-click="orderByMe('fields.last_name')">Last Name</th>
 					<th ng-click="orderByMe('fields.branch')">Branch</th>
@@ -43,13 +43,13 @@
 				{% csrf_token %}
 				{% verbatim %}
 				<tr ng-repeat="student in students | orderBy:sort:reverse | filter: tableValue">
-					<td ng-if="edited == student.pk">{{student.fields.stud_id}}</td>
+					<td ng-if="edited == student.pk">{{student.fields.user[0]}}</td>
 					<td ng-if="edited == student.pk"><div class="input-field"><input id="first_name" type="text" value={{student.fields.first_name}} /></div></td>
 					<td ng-if="edited == student.pk"><div class="input-field"><input id="last_name" type="text" value={{student.fields.last_name}} /></div></div></td>
 					<td ng-if="edited == student.pk"><div class="input-field"><input id="branch" type="text" value={{student.fields.branch}} /></div></td>
 					<td ng-if="edited == student.pk"><div class="input-field"><input id="year" type="text" value={{student.fields.year}} /></div></td>	
 
-					<td ng-if="edited != student.pk">{{student.fields.stud_id}}</td>
+					<td ng-if="edited != student.pk">{{student.fields.user[0]}}</td>
 					<td ng-if="edited != student.pk">{{student.fields.first_name}}</td>
 					<td ng-if="edited != student.pk">{{student.fields.last_name}}</td>
 					<td ng-if="edited != student.pk">{{student.fields.branch}}</td>
