--- a/portal/templates/forms/addStudent.html
+++ b/portal/templates/forms/addStudent.html
@@ -43,15 +43,15 @@
 				{% csrf_token %}
 				{% verbatim %}
 				<tr ng-repeat="student in students | orderBy:sort:reverse | filter: tableValue">
-					<td ng-if="edited == student.pk">{{student.fields.user[0]}}</td>
+					<td ng-if="edited == student.pk">{{student.fields.user.username}}</td>
 					<td ng-if="edited == student.pk"><div class="input-field"><input id="first_name" type="text" value={{student.fields.user[1]}} /></div></td>
 					<td ng-if="edited == student.pk"><div class="input-field"><input id="last_name" type="text" value={{student.fields.user[2]}} /></div></div></td>
 					<td ng-if="edited == student.pk"><div class="input-field"><input id="branch" type="text" value={{student.fields.branch}} /></div></td>
 					<td ng-if="edited == student.pk"><div class="input-field"><input id="year" type="text" value={{student.fields.year}} /></div></td>	
 
-					<td ng-if="edited != student.pk">{{student.fields.user[0]}}</td>
-					<td ng-if="edited != student.pk">{{student.fields.user[1]}}</td>
-					<td ng-if="edited != student.pk">{{student.fields.user[2]}}</td>
+					<td ng-if="edited != student.pk">{{student.fields.user.username}}</td>
+					<td ng-if="edited != student.pk">{{student.fields.user.first_name}}</td>
+					<td ng-if="edited != student.pk">{{student.fields.user.last_name}}</td>
 					<td ng-if="edited != student.pk">{{student.fields.branch}}</td>
 					<td ng-if="edited != student.pk">{{student.fields.year}}</td>
 
@@ -146,7 +146,7 @@
 			        headers: {
 						'X-CSRFToken': jQuery("[name=csrfmiddlewaretoken]").val(),
 					},
-			  		data: {'pk': student.pk, 'first_name': $('#first_name').val(), 'last_name': $('#last_name').val(), 'branch': $('#branch').val(), 'year': $('#year').val()},
+			  		data: {'pk': student.fields.user[0], 'first_name': $('#first_name').val(), 'last_name': $('#last_name').val(), 'branch': $('#branch').val(), 'year': $('#year').val()},
 			        url : "/portal/guide/students/update/"
 
 			    }).then(function mySuccess(response) {
